feat: Add extra data points for speedtest tools that support it.
